--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
-  <title>Ansible Semaphore demo app</title>
+  <title>Semaphore UI demo app</title>
 </head>
 <body>
-  <h1>Hello, Habr!</h1>
+  <h1>Hello, World!</h1>
 
   <div style="margin-bottom: 20px">
       <span>Test Var value:</span>
